--- a/index.html
+++ b/index.html
@@ -2,55 +2,106 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Christmas Flappy Adam</title>
     <style>
-        body {
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            position: fixed;
+            background: #1a472a;
+        }
+
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            background: #1a472a;
-            touch-action: none;
+            font-family: Arial, sans-serif;
         }
-        canvas {
-            border: 2px solid white;
-            max-width: 100%;
-            max-height: 100vh;
-            touch-action: none;
-        }
+
         #gameContainer {
-            position: relative;
+            position: fixed;
             width: 100%;
-            max-width: 400px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            touch-action: none;
         }
+
+        canvas {
+            height: 100%;
+            max-width: 100%;
+            object-fit: contain;
+            touch-action: none;
+        }
+
         #startScreen {
             position: absolute;
-            top: 50%;
             left: 50%;
+            top: 45%;
             transform: translate(-50%, -50%);
             text-align: center;
-            color: white;
-            font-family: Arial, sans-serif;
+            width: 90%;
             z-index: 1;
         }
+
+        h1 {
+            color: white;
+            font-size: min(10vw, 48px);
+            margin-bottom: 4vh;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        .subtitle {
+            color: #cccccc;
+            font-size: min(6vw, 24px);
+            margin-bottom: 6vh;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+            padding: 0 20px;
+            line-height: 1.4;
+        }
+
         #startButton {
-            padding: 10px 20px;
-            font-size: 18px;
             background: #c41e3a;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
+            padding: 15px 30px;
+            font-size: min(6vw, 24px);
             cursor: pointer;
-            margin-top: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s;
+            min-width: 200px;
+            width: 60%;
+            max-width: 300px;
         }
-        .subtitle {
-            font-size: 24px;
-            margin-top: 10px;
-            color: #cccccc;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+
+        #startButton:active {
+            transform: scale(0.95);
+        }
+
+        @media (max-height: 500px) {
+            h1 {
+                font-size: min(8vw, 32px);
+                margin-bottom: 2vh;
+            }
+            .subtitle {
+                font-size: min(4vw, 18px);
+                margin-bottom: 3vh;
+            }
+            #startButton {
+                padding: 10px 20px;
+                font-size: min(4vw, 18px);
+            }
         }
     </style>
 </head>
